# libtgvoip

test/: CMakeLists.txt  pulseaudio.cpp  tgvoip_test.cpp
